--- a/dynibar.ipynb
+++ b/dynibar.ipynb
@@ -1,25 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Albly/dynibar/blob/main/dynibar.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -28,241 +13,67 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "pv1qyuGV6uJG",
-        "outputId": "03e7f46a-336c-4aaa-de5f-e9324e212048"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/content/dynibar\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.4/3.4 MB\u001b[0m \u001b[31m41.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m510.0/510.0 kB\u001b[0m \u001b[31m9.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m565.1/565.1 kB\u001b[0m \u001b[31m12.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m146.0/146.0 kB\u001b[0m \u001b[31m4.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m952.4/952.4 kB\u001b[0m \u001b[31m14.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-            "ipython 7.34.0 requires jedi>=0.16, which is not installed.\n",
-            "arviz 0.15.1 requires setuptools>=60.0.0, but you have setuptools 59.5.0 which is incompatible.\n",
-            "cvxpy 1.3.2 requires setuptools>65.5.1, but you have setuptools 59.5.0 which is incompatible.\u001b[0m\u001b[31m\n",
-            "\u001b[0m"
-          ]
-        }
-      ],
+      "metadata": {},
+      "outputs": [],
       "source": [
-        "!git clone -q https://github.com/google/dynibar.git\n",
+        "import gdown\n",
+        "\n",
+        "# clone dynibar + models\n",
+        "!git clone -q https://github.com/Albly/dynibar.git\n",
         "%cd dynibar\n",
         "\n",
+        "# requirements\n",
         "!pip install -q configargparse\n",
-        "!pip install -q scikit-image\n",
+        "!pip install -q scikit-image==0.18\n",
         "!pip install -q imageio==2.22.0\n",
         "!pip install -q timm==0.6.7\n",
         "!pip install -q kornia==0.6.7\n",
         "!pip install -q ninja==1.11.1\n",
-        "!pip install -q setuptools==59.5.0"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "mgiLKd8WDvlQ"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!pip install scikit-image==0.18"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "h3U1MzWMBGNf",
-        "outputId": "e7fdc524-60c2-4868-cb24-a991fbcd3c62"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Collecting scikit-image==0.18\n",
-            "  Using cached scikit-image-0.18.0.tar.gz (36.4 MB)\n",
-            "  Installing build dependencies ... \u001b[?25l\u001b[?25hdone\n",
-            "  Getting requirements to build wheel ... \u001b[?25l\u001b[?25hcanceled\n",
-            "\u001b[31mERROR: Operation cancelled by user\u001b[0m\u001b[31m\n",
-            "\u001b[0m"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#skimage.metrics.structural_similarity"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Oo7iZ7PBAwEq",
-        "outputId": "5fd0dfb6-b48a-4eb5-aefe-161134e89c00"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<function skimage.metrics._structural_similarity.structural_similarity(im1, im2, *, win_size=None, gradient=False, data_range=None, channel_axis=None, multichannel=False, gaussian_weights=False, full=False, **kwargs)>"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 24
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import gdown\n",
+        "!pip install -q setuptools==59.5.0\n",
+        "\n",
         "!wget -q https://storage.googleapis.com/gresearch/dynibar/nvidia_checkpoints.zip\n",
         "!unzip -q nvidia_checkpoints.zip\n",
         "!rm nvidia_checkpoints.zip\n",
-        "#gdown.download_folder('https://drive.google.com/drive/folders/1Gv6j_RvDG2WrpqEJWtx73u1tlCZKsPiM', quiet = True)\n",
-        "\n",
-        "!gdown --id -q 12EdUZoAdBUPDbpHzs8ojhU6_oEQwyWwk\n",
-        "!unzip -q models.zip\n",
-        "!rm models.zip\n",
-        "!rm -r __MACOSX/"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Tnm628lU8411",
-        "outputId": "5f8ef98d-c115-4ee2-df9d-0bb45ded233d"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/usr/local/lib/python3.10/dist-packages/gdown/cli.py:121: FutureWarning: Option `--id` was deprecated in version 4.3.1 and will be removed in 5.0. You don't need to pass it anymore to use a file ID.\n",
-            "  warnings.warn(\n"
-          ]
-        }
+        "!gdown -q 1LsFuphsrbo2TinmPeD4Tyqq7Zg86cua1\n",
+        "!unzip -q Balloon1.zip\n",
+        "!rm Balloon1.zipa"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!gdown -q 1LsFuphsrbo2TinmPeD4Tyqq7Zg86cua1"
-      ],
-      "metadata": {
-        "id": "5VLSpiSGk3Fi"
-      },
       "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!unzip -q Balloon1.zip\n",
-        "!rm Balloon1.zip"
-      ],
-      "metadata": {
-        "id": "SWQGqrdsjzXa"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
+      "metadata": {},
+      "outputs": [],
       "source": [
         "  # Usage: In txt file, You need to change \"rootdir\" to your code root directory,\n",
         "  # and \"folder_path\" to input data directory, and make sure \"coarse_dir\" points to\n",
         "  # \"checkpoints\" folder you unzip.\n",
-        "  !python eval_nvidia.py --config configs_nvidia/eval_balloon1_long.txt"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "3ScG76mlA4Ml",
-        "outputId": "19d2f98e-cbf5-4bff-fb6f-adb4ee77828d"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "loading ['Balloon1'] for rendering\n",
-            "imgdir  /content/dynibar/Balloon1/dense/images_546x288  factor  3.517361111111111\n",
-            "================= render_path_spiral ==========================\n",
-            "bds  1.3333334 3.9991977\n",
-            "args.num_frames  192\n",
-            "Traceback (most recent call last):\n",
-            "  File \"/content/dynibar/eval_nvidia.py\", line 275, in <module>\n",
-            "    model = DynibarFF(args, load_scheduler=False, load_opt=False)\n",
-            "  File \"/content/dynibar/ibrnet/model.py\", line 44, in __init__\n",
-            "    ).to(self.device)\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/torch/nn/modules/module.py\", line 1145, in to\n",
-            "    return self._apply(convert)\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/torch/nn/modules/module.py\", line 797, in _apply\n",
-            "    module._apply(fn)\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/torch/nn/modules/module.py\", line 797, in _apply\n",
-            "    module._apply(fn)\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/torch/nn/modules/module.py\", line 820, in _apply\n",
-            "    param_applied = fn(param)\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/torch/nn/modules/module.py\", line 1143, in convert\n",
-            "    return t.to(device, dtype if t.is_floating_point() or t.is_complex() else None, non_blocking)\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/torch/cuda/__init__.py\", line 247, in _lazy_init\n",
-            "    torch._C._cuda_init()\n",
-            "RuntimeError: Found no NVIDIA driver on your system. Please check that you have an NVIDIA GPU and installed a driver from http://www.nvidia.com/Download/index.aspx\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "gVNS57eBEBF4"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!pwd"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ycdzEHbD_MDr",
-        "outputId": "a34d5f77-46fd-4582-b170-fef0e928200a"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/content/dynibar\n"
-          ]
-        }
+        "!python eval_nvidia.py --config configs_nvidia/eval_balloon1_long.txt"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.4"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
